--- a/docs/includes/dr-styles.css
+++ b/docs/includes/dr-styles.css
@@ -1,54 +1,54 @@
-body { font-size:10px; color:#000000; font-family: verdana,sans-serif; background-color:#ffaa11;
+body { font-size:smaller; color:#000033; font-family: verdana,sans-serif; background-color:#ffaa11;
 	overflow-x:hidden; overflow-y:auto;
 }
 
-.thisText {font-family: verdana, sans-serif;font-size:11px; }
+h1 {padding:0px; margin:0px 0px 10px 0px; }
+h2 {padding:0px; margin:10px 0px 8px; }
+h3 {padding:0px; margin:15px 0px 5px; font-size: 14px;}
 
-h1 {font-family: verdana, sans-serif;font-size:18px; padding:0px; margin:0px 0px 10px 0px; }
-h2 {font-family: verdana, sans-serif;font-size:14px; padding:0px; margin:0px; }
-h2.bloghead {font-family: verdana, sans-serif;font-size:18px; padding:0px 0px 10px 0px; margin:0px; }
+div.content h2 {font-size: 14px;}
 
-b { font-size:10px; color:#000033; font-family: verdana, sans-serif;  font-weight: bold;}
 
-b.bigger { font-size:12px; color:#000033; font-family: verdana, sans-serif;  font-weight: bold;}
+a.head{ text-decoration: underline; font-size:18px;}
 
-b.white { font-size:10px; color:#ffffff; font-family: verdana, sans-serif;  font-weight: bold;}
-
-i { font-size:10px; color:#000033; font-family: verdana, sans-serif;  font-style:italic;}
-p { font-size:10px; color:#000033; font-family: verdana, sans-serif; }
-td { font-size:10px; color:#000033; font-family: verdana, sans-serif; width:25%;}
-
-a.head{ text-decoration: underline; font-size:14px;}
 a:visited{ text-decoration: underline; color: rgb(24, 47, 23); }
 a:hover{ text-decoration: underline; color: #000048;}
+
+td { vertical-align: top; height: 100%;}
 
 ul	{margin: 0px;
 	padding: 0px;
 }
 
-ul li {list-style-type: none;
-		margin-top: 10px;
-		padding: 0px;
+ul li {
+	list-style-type: none;
+	margin-top: 8px;
+	margin-bottom: 10px;
+	padding: 0px;
 }
 
+div.content {
+	height: 100%;
+	padding-left: 4px;
+	margin-bottom: 10px;
+}
+
+div.content ul li {
+	list-style-type: circle;
+	text-indent: 5px;
+	margin-left:20px;
+	font-size: 12px;
+}
 
 .box {
-        BORDER-TOP:    #333333 1px solid; 
-        BORDER-LEFT:   #333333 1px solid; 
-        BORDER-BOTTOM: #333333 1px solid; 
-        BORDER-RIGHT:  #333333 1px solid; 
-		margin: 10px;
-		margin-top: 15px;
-		padding: 5px;
+        border:  #333333 1px solid; 
+		margin: 10px 15px 15px 0px;
+		padding: 5px 15px 15px 15px;
 		background-color:	#FAFAFF;
 }
 
-.year {
-	font-style: italic;
-}
-
 .blog-thumb {
-	width: 200px;
+	width: 200px; margin-right: 10px; 
 }
 
 .blog-thumb:hover {
